--- a/niukhalov_cv.tex
+++ b/niukhalov_cv.tex
@@ -40,22 +40,22 @@
 	\begin{cvsection}{Employment}
 		\begin{cvsubsection}{Software Engineer}{Agoda}{Summer 2017 -- Present}
 			\begin{itemize}
-				\item Designed and developed with a team a distributed system for updating hotel prices by pulling and aggregating partner's data.
-				\item Reduced load on a monitoring system by more than 1000\% by aggregating measurements on a client before sending them to the system.
+				\item Reduced the end-to-end time of updating hotels' prices from several minutes to tens of seconds by re-designing and optimizing internal services.
+				\item Reduced the load on the internal monitoring system by more than 1000\% by aggregating measurements on clients before sending them to the system.
         \item Reduced the number of missed phone calls to a person on call by creating a slack bot reminding one when (s)he is on call.
 			\end{itemize}
 		\end{cvsubsection}
 
 		\begin{cvsubsection}{Software Engineer}{2GIS}{Winter 2015 -- Summer 2017}
 			\begin{itemize}
-				\item Created with a team an automated pipeline for importing geodata from OpenSteetMap and merging it with internal geodata.
+				\item Created with a team an automated pipeline for importing geodata from OpenSteetMap.
 				\item Created a geosearch API for querying geodata features by a feature class and a bounding box.
 			\end{itemize}
 		\end{cvsubsection}
 
 		\begin{cvsubsection}{Software Engineer}{Center of Financial Technologies}{Spring 2013 -- Winter 2015}
 			\begin{itemize}
-        \item Developed a Java library for performing contactless payments using Android Host-base Card Emulation (Certified by Visa).
+        \item Developed a Java library for performing contactless payments using Android Host-base Card Emulation.
         \item Developed with a team firmware for Point-of-Sale (POS) terminals.
         \item Reduced time of testing firmware for JavaCard applets by creating an automated testing framework.
 			\end{itemize}
@@ -64,6 +64,12 @@
 	\end{cvsection}
 
 	\begin{cvsection}{Education}
+    \begin{cvsubsection}{Udacity}{}{Summer 2018 -- Winter 2019}
+			\begin{itemize}
+				\item Self-Driving Car Engineer Nanodegree Program.
+				\item Coursework: Computer Vision; Sensor Fusion; Localization; Motion Control; Path Planner.
+			\end{itemize}
+		\end{cvsubsection}
 		\begin{cvsubsection}{Novosibirsk, Russia}{Novosibirsk State Technical University}{Fall 2007 -- Summer 2011}
 			\begin{itemize}
 				\item B.S.E. in Applied Mathematics and Computer Science, June 2011.
@@ -77,6 +83,11 @@
 			\begin{itemize}
 				\item \textbf{Advanced Lane Finding} (2018). A software pipeline to identify the lane boundaries in a video. The pipeline consists of several computer vision techniques such as color and gradient thresholding, and perspective transformation.
 				\item \textbf{Traffic Sign Recognition} (2018). A convolutional neural network for classifying traffic sign images using the German Traffic Sign Dataset.
+				\item \textbf{Behavioral Cloning} (2018). A convolutional neural network for predicting the steering angle of the simulated vehicle by images from its camera.
+				\item \textbf{Extended Kalman Filter} (2018). Kalman Filter implementation to estimate the state of a moving object of interest with noisy lidar and radar measurements.
+				\item \textbf{Kidnapped Vehicle} (2018). Particle Filter implementation to localize an object by noisy GPS coordinates.
+				\item \textbf{Highway Driving} (2019). A behaviour planning program to safely navigate the simulated car around a virtual highway with other traffic.
+				\item \textbf{PID Controller} (2019). PID Controller implementation to control the simulated car's steering angle.
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
