--- a/niukhalov_cv.tex
+++ b/niukhalov_cv.tex
@@ -28,8 +28,8 @@
 
 % Set applicant's personal data for header
 \name{Roman Niukhalov}
-\address{Bangkok, Thailand}
-\contacts{+66 (97) 002-9407 \linebreak r.nyukhalov@gmail.com}
+\address{Singapore}
+\contacts{+65 81171790 \linebreak r.nyukhalov@gmail.com}
 
 \begin{document}
 
@@ -38,22 +38,27 @@
 
 	% Print the content
 	\begin{cvsection}{Employment}
-		\begin{cvsubsection}{Software Engineer}{Agoda}{Summer 2017 -- Present}
+		\begin{cvsubsection}{Senior Software Engineer}{nuTonomy}{Aug 2019 -- Present}
 			\begin{itemize}
-				\item Reduced the end-to-end time of updating hotels' prices from several minutes to tens of seconds by re-designing and optimizing internal services.
-				\item Reduced the load on the internal monitoring system by more than 1000\% by aggregating measurements on clients before sending them to the system.
-        \item Reduced the number of missed phone calls to a person on call by creating a slack bot reminding one when (s)he is on call.
+				\item Developing data processing and annotation tools for HD-maps.
 			\end{itemize}
 		\end{cvsubsection}
 
-		\begin{cvsubsection}{Software Engineer}{2GIS}{Winter 2015 -- Summer 2017}
+		\begin{cvsubsection}{Software Engineer}{Agoda}{Jun 2017 -- Aug 2019}
+			\begin{itemize}
+				\item Reduced the end-to-end time of updating hotels' prices from several minutes to tens of seconds by re-designing and optimizing internal services.
+				\item Reduced the load on the internal monitoring system by more than 1000\% by aggregating measurements on clients before sending them to the system.
+			\end{itemize}
+		\end{cvsubsection}
+
+		\begin{cvsubsection}{Software Engineer}{2GIS}{Dec 2015 -- Jun 2017}
 			\begin{itemize}
 				\item Created with a team an automated pipeline for importing geodata from OpenSteetMap.
 				\item Created a geosearch API for querying geodata features by a feature class and a bounding box.
 			\end{itemize}
 		\end{cvsubsection}
 
-		\begin{cvsubsection}{Software Engineer}{Center of Financial Technologies}{Spring 2013 -- Winter 2015}
+		\begin{cvsubsection}{Software Engineer}{Center of Financial Technologies}{Apr 2013 -- Dec 2015}
 			\begin{itemize}
         \item Developed a Java library for performing contactless payments using Android Host-base Card Emulation.
         \item Developed with a team firmware for Point-of-Sale (POS) terminals.
@@ -81,7 +86,7 @@
 	\begin{cvsection}{Technical Experience}
 		\begin{cvsubsection}{Course Projects}{}{}
 			\begin{itemize}
-				\item \textbf{Advanced Lane Finding} (2018). A software pipeline to identify the lane boundaries in a video. The pipeline consists of several computer vision techniques such as color and gradient thresholding, and perspective transformation.
+				\item \textbf{Advanced Lane Finding} (2018). A software pipeline to identify the lane boundaries in a video. The pipeline consists of several computer vision techniques such as color and gradient thresholding.
 				\item \textbf{Traffic Sign Recognition} (2018). A convolutional neural network for classifying traffic sign images using the German Traffic Sign Dataset.
 				\item \textbf{Behavioral Cloning} (2018). A convolutional neural network for predicting the steering angle of the simulated vehicle by images from its camera.
 				\item \textbf{Extended Kalman Filter} (2018). Kalman Filter implementation to estimate the state of a moving object of interest with noisy lidar and radar measurements.
@@ -95,7 +100,7 @@
 	\begin{cvsection}{Languages and Technologies}
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
-				\item C++; C; Java; Scala; Python
+				\item C\#; C++; C; Java; Scala; Python
 				\item Intellij Idea; Git; PostgreSQL; Cassandra; Couchbase; Kafka
 				\item Docker; Docker Compose; Kubernetes
 				\item Jenkins, Gitlab CI, Teamcity, Bamboo
