--- a/niukhalov_cv.tex
+++ b/niukhalov_cv.tex
@@ -29,7 +29,7 @@
 % Set applicant's personal data for header
 \name{Roman Niukhalov}
 \address{Singapore}
-\contacts{+65 81171790 \linebreak r.nyukhalov@gmail.com}
+\contacts{+65 88938313 \linebreak r.nyukhalov@gmail.com}
 
 \begin{document}
 
@@ -38,31 +38,33 @@
 
 	% Print the content
 	\begin{cvsection}{Employment}
-		\begin{cvsubsection}{Senior Software Engineer}{nuTonomy}{Aug 2019 -- Present}
+    \begin{cvsubsection}{Senior Software Engineer}{nuTonomy/Aptiv/Motional (Singapore)}{Aug 2019 -- Present}
 			\begin{itemize}
-				\item Developing data processing and annotation tools for HD-maps.
+        \item Developing services, data pipelines and mapping software for creating High-Definition maps.
+				\item Productized a number of services and improved the development culture of the team.
+				\item Increased the speed of creating maps by automating the most time-consuming manual operations.
 			\end{itemize}
 		\end{cvsubsection}
 
-		\begin{cvsubsection}{Software Engineer}{Agoda}{Jun 2017 -- Aug 2019}
+    \begin{cvsubsection}{Software Engineer}{Agoda (Thailand)}{Jun 2017 -- Aug 2019}
 			\begin{itemize}
 				\item Reduced the end-to-end time of updating hotels' prices from several minutes to tens of seconds by re-designing and optimizing internal services.
 				\item Reduced the load on the internal monitoring system by more than 1000\% by aggregating measurements on clients before sending them to the system.
 			\end{itemize}
 		\end{cvsubsection}
 
-		\begin{cvsubsection}{Software Engineer}{2GIS}{Dec 2015 -- Jun 2017}
+    \begin{cvsubsection}{Software Engineer}{2GIS (Russia)}{Dec 2015 -- Jun 2017}
 			\begin{itemize}
-				\item Created with a team an automated pipeline for importing geodata from OpenSteetMap.
+				\item Created an automated pipeline for importing geodata from OpenSteetMap to internal storage.
 				\item Created a geosearch API for querying geodata features by a feature class and a bounding box.
 			\end{itemize}
 		\end{cvsubsection}
 
-		\begin{cvsubsection}{Software Engineer}{Center of Financial Technologies}{Apr 2013 -- Dec 2015}
+    \begin{cvsubsection}{Software Engineer}{Center of Financial Technologies (Russia)}{Apr 2013 -- Dec 2015}
 			\begin{itemize}
-        \item Developed a Java library for performing contactless payments using Android Host-base Card Emulation.
-        \item Developed with a team firmware for Point-of-Sale (POS) terminals.
-        \item Reduced time of testing firmware for JavaCard applets by creating an automated testing framework.
+        \item Developed a library for performing contactless payments using Android Host-base Card Emulation.
+        \item Developed firmware for Point-of-Sale (POS) terminals.
+        \item Reduced release cycle time by developing an automated testing framework.
 			\end{itemize}
 		\end{cvsubsection}
 
@@ -90,9 +92,7 @@
 				\item \textbf{Traffic Sign Recognition} (2018). A convolutional neural network for classifying traffic sign images using the German Traffic Sign Dataset.
 				\item \textbf{Behavioral Cloning} (2018). A convolutional neural network for predicting the steering angle of the simulated vehicle by images from its camera.
 				\item \textbf{Extended Kalman Filter} (2018). Kalman Filter implementation to estimate the state of a moving object of interest with noisy lidar and radar measurements.
-				\item \textbf{Kidnapped Vehicle} (2018). Particle Filter implementation to localize an object by noisy GPS coordinates.
 				\item \textbf{Highway Driving} (2019). A behaviour planning program to safely navigate the simulated car around a virtual highway with other traffic.
-				\item \textbf{PID Controller} (2019). PID Controller implementation to control the simulated car's steering angle.
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
@@ -100,10 +100,10 @@
 	\begin{cvsection}{Languages and Technologies}
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
-				\item C\#; C++; C; Java; Scala; Python
-				\item Intellij Idea; Git; PostgreSQL; Cassandra; Couchbase; Kafka
-				\item Docker; Docker Compose; Kubernetes
-				\item Jenkins, Gitlab CI, Teamcity, Bamboo
+				\item Java; Scala; Python3; C++; C; C\#
+				\item PostgreSQL; Cassandra; Couchbase; Kafka
+				\item Docker; Docker Compose; Kubernetes; AWS; Terraform
+				\item Jenkins, Gitlab CI, Teamcity, Bamboo, GitHub, Bitbucket
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
