--- a/niukhalov_cv.tex
+++ b/niukhalov_cv.tex
@@ -28,8 +28,8 @@
 
 % Set applicant's personal data for header
 \name{Roman Niukhalov}
-\address{Singapore}
-\contacts{+65 88938313 \linebreak r.nyukhalov@gmail.com}
+\address{Autstralia}
+\contacts{+61 403999482 \linebreak r.nyukhalov@gmail.com}
 
 \begin{document}
 
@@ -38,13 +38,19 @@
 
 	% Print the content
 	\begin{cvsection}{Employment}
-    \begin{cvsubsection}{Senior Software Engineer}{nuTonomy/Aptiv/Motional (Singapore)}{Aug 2019 -- Present}
-			\begin{itemize}
-        \item Developing services, data pipelines and mapping software for creating High-Definition maps.
-				\item Productized a number of services and improved the development culture of the team.
-				\item Increased the speed of creating maps by automating the most time-consuming manual operations.
-			\end{itemize}
-		\end{cvsubsection}
+    \begin{cvsubsection}{Software Engineer}{Canva (Australia)}{Nov 2021 -- Present}
+        \begin{itemize}
+            \item Developing core libraries and tools to enable secure and efficient communication between microservices.
+        \end{itemize}
+    \end{cvsubsection}
+
+    \begin{cvsubsection}{Senior Software Engineer}{nuTonomy/Aptiv/Motional (Singapore)}{Aug 2019 -- Aug 2021}
+        \begin{itemize}
+            \item Developed services, data pipelines and mapping software for creating High-Definition maps.
+            \item Increased the speed of creating maps by automating the most time-consuming manual operations.
+        \end{itemize}
+    \end{cvsubsection}
+
 
     \begin{cvsubsection}{Software Engineer}{Agoda (Thailand)}{Jun 2017 -- Aug 2019}
 			\begin{itemize}
@@ -100,10 +106,7 @@
 	\begin{cvsection}{Languages and Technologies}
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
-				\item Java; Scala; Python3; C++; C; C\#
-				\item PostgreSQL; Cassandra; Couchbase; Kafka
-				\item Docker; Docker Compose; Kubernetes; AWS; Terraform
-				\item Jenkins, Gitlab CI, Teamcity, Bamboo, GitHub, Bitbucket
+				\item Java; Scala; Python3; C++; C; C\#; PostgreSQL; Cassandra; Couchbase; Kafka; Docker; Docker Compose; Kubernetes; AWS; Terraform; Jenkins, Gitlab CI, Teamcity, Bamboo, GitHub, Bitbucket
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
