Rename 2GIS -> DG-Soft

--- a/niukhalov_cv.tex
+++ b/niukhalov_cv.tex
@@ -59,7 +59,7 @@
 			\end{itemize}
 		\end{cvsubsection}
 
-    \begin{cvsubsection}{Software Engineer}{2GIS (Russia)}{Dec 2015 -- Jun 2017}
+    \begin{cvsubsection}{Software Engineer}{DG-Soft (Russia)}{Dec 2015 -- Jun 2017}
 			\begin{itemize}
 				\item Created an automated pipeline for importing geodata from OpenSteetMap to internal storage.
 				\item Created a geosearch API for querying geodata features by a feature class and a bounding box.
